samples/_failures_safe/1761320352_60257d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3036c0ef.c: In function ‘state_to_string’:
./samples/SAFE/__tmp_3036c0ef.c:154:9: error: expected declaration or statement at end of input
  154 |         case STATE_ERROR:
      |         ^~~~
./samples/SAFE/__tmp_3036c0ef.c:154:9: error: expected declaration or statement at end of input
